# aisee-plugin

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/workflows/: ci.yml  publish-pypi.yml
aisee/memory/: index.md  rules.md
docs/: ai_coding_openspec_schema_guidelines_v2.md  best-practices.en.md  best-practices.md  compatibility-policy.en.md  compatibility-policy.md  plugin-marketplace.en.md  plugin-marketplace.md  release.md  schema-packs.md  team-knowledge.en.md  team-knowledge.md  workflow.en.md  workflow.md
docs/architecture/: OPENSPEC_SCHEMA_GUIDE.md  aisee-cli-context-and-id-registry.md  aisee-openspec-compound-integration.md  aisee-team-knowledge.md  openspec-multi-schema-best-practices.md
docs/plans/: 2026-06-01-001-feat-aisee-cli-completion-plan.md  2026-06-05-001-feat-contract-context-server-plan.md  2026-06-05-002-feat-team-knowledge-guardrail-retrieval-plan.md  2026-06-08-001-feat-team-knowledge-system-design-plan.md  2026-06-08-002-feat-reusable-workflow-routing-plan.md  2026-06-08-003-refactor-github-marketplace-assets-plan.md  2026-06-09-001-refactor-agile-planning-anchor-id-plan.md  2026-06-09-002-feat-unimplemented-contract-split-plan.md  2026-06-09-003-feat-team-knowledge-cli-init-plan.md  2026-06-09-004-refactor-skill-system-governance-plan.md  2026-06-10-001-refactor-intake-source-traceability-plan.md  2026-06-10-002-refactor-schema-capability-boundaries-plan.md  2026-06-10-003-refactor-spec-driven-compatibility-plan.md  2026-06-10-004-refactor-knowledge-first-cli-plan.md  2026-06-10-005-feat-project-memory-cli-plan.md  2026-06-13-001-refactor-context-pack-memory-companion-plan.md  2026-06-14-001-refactor-remove-bridge-json-and-context-pack-surface-plan.md
docs/reviews/: 2026-06-03-darwin-skill-audit.md  2026-06-09-anchor-refactor-review.md
references/: cli-preflight.md  context-pack-contract.md  context-pack-targets.md  id-policy.md  knowledge-card-contract.md  source-map-contract.md
schemas/aisee-app-spec-driven/: schema.yaml
schemas/infra-change/: schema.yaml
scripts/: check_versions.py  smoke_release.py  sync_package_assets.py  sync_versions.py
skills/aisee-apply-guard/: SKILL.md
skills/aisee-architecture/: SKILL.md
skills/aisee-archive-guard/: SKILL.md
skills/aisee-assets/: SKILL.md
skills/aisee-change-author/: SKILL.md
skills/aisee-change-design/: SKILL.md
skills/aisee-change-plan/: SKILL.md
skills/aisee-design-assets/: SKILL.md
skills/aisee-design-spec/: SKILL.md
skills/aisee-device-context/: SKILL.md
skills/aisee-flow/: SKILL.md
tests/: skill_contract_helpers.py  test_change_checks.py  test_change_plan_mermaid_contract.py  test_cli_command_surface.py  test_cli_context_bus.py  test_cli_errors.py  test_context_pack.py  test_contract_context.py  test_contract_server.py  test_doctor_flow_schema.py  test_id_registry.py  test_knowledge_config.py  test_knowledge_configure.py  test_knowledge_from_change.py  test_knowledge_index.py  test_knowledge_init_repo.py  test_knowledge_install_update.py  test_knowledge_lifecycle.py  test_knowledge_promote_batch.py  test_knowledge_query.py  test_knowledge_scaffold.py  test_knowledge_schema.py  test_lifecycle_dogfood.py  test_marketplace_hints.py  test_memory_cli.py  test_memory_config.py  test_memory_context_pack.py  test_memory_hooks.py  test_memory_index.py  test_memory_search.py  test_openspec_init.py  test_plugin_marketplace.py  test_plugin_packaging.py  test_schema_pack_examples.py  test_setup_schemas.py  test_skill_cli_preflight.py  test_skill_eval_schema.py  test_source_map.py  test_tool_checks.py  test_version_consistency.py
(+577 files in other folders)
