[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisee-plugin"
version = "0.1.0"
description = "AI-Enhanced Software Engineering plugin for OpenSpec-driven workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Fengliang" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.scripts]
aisee = "aisee_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aisee_plugin_assets = [
  "**/*.csv",
  "**/*.js",
  "**/*.json",
  "**/*.jsonl",
  "**/*.md",
  "**/*.py",
  "**/*.svg",
  "**/*.txt",
  "**/*.xlsx",
  "**/*.yaml",
  "**/*.yml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
