[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisee-plugin"
version = "0.1.0"
description = "AI-Enhanced Software Engineering plugin for OpenSpec-driven workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Fengliang" }
]
keywords = [
  "ai",
  "agent",
  "openspec",
  "spec-driven-development",
  "software-engineering"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities"
]
dependencies = [
  "PyYAML>=6.0"
]

[project.urls]
Homepage = "https://cnb.cool/zersproducts/aisee-plugin"
Source = "https://cnb.cool/zersproducts/aisee-plugin"

[project.scripts]
aisee = "aisee_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aisee_plugin_assets = [
  "**/*.csv",
  "**/*.js",
  "**/*.json",
  "**/*.jsonl",
  "**/*.md",
  "**/*.py",
  "**/*.svg",
  "**/*.txt",
  "**/*.xlsx",
  "**/*.yaml",
  "**/*.yml"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
