[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisee-plugin"
version = "0.13.0"
description = "AI-Enhanced Software Engineering plugin for OpenSpec and Compound Engineering workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Fengliang" }
]
keywords = [
  "ai",
  "agent",
  "openspec",
  "spec-driven-development",
  "software-engineering"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities"
]
dependencies = [
  "PyYAML>=6.0",
  "tomli>=2.0; python_version < '3.11'"
]

[project.urls]
Homepage = "https://aisee.wiki"
Source = "https://github.com/AISEE-LAB/aisee-plugin"

[project.scripts]
aisee = "aisee_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
